// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XSymbol should match snapshot 1`] = `
<ForwardRef
  className="x animateX"
/>
`;

exports[`XSymbol should match snapshot 2`] = `
<ForwardRef
  className="x"
/>
`;
